# byte

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  meson.build
.githooks/: pre-commit
src/: main.c
src/compiler/: compiler.c  compiler.h  scanner.c  scanner.h  vm.c  vm.h
src/core/: chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
src/debug/: debug.c  debug.h
src/utils/: memory.h
tests/: basic.byte  expr.byte  factorial.byte  mandlebrot.byte  parity.byte  reverse.byte  syntax.byte
